rtest/tests/jsr335/Semantics/ConstructorReferenceAnalysis/ArrayReferences/ShouldCompile/syntax01/Test.java
// .result=COMPILE_PASS

public class Test {
	
	interface A {
		int[] m(int i);
	}
	
	public static void main(String[] arg) {
		A a = int[]::new;
	}

}