rtest/tests/jsr335/Semantics/ConstructorReferenceAnalysis/ArrayReferences/ShouldFail/syntax02/Test.java
// .result=COMPILE_FAIL
import java.util.ArrayList;


public class Test {
	
	interface A {
		ArrayList<Integer>[][] m(int i);
	}
	
	public static void main(String[] arg) {
		A a = ArrayList[]::new;
	}

}